--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,9 @@ dependencies = [
     "click>=8.0.0",
     "sqlglot>=27.8.0",
     "networkx>=3.5",
-    "sqlmesh[duckdb]>=0.211.2",
+    "sqlmesh[duckdb,lsp]>=0.211.2",
     "duckdb>=1.3.2",
+    "quarto>=0.1.0",
 ]
 
 [project.optional-dependencies]
