--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "sqlmesh[duckdb,lsp]>=0.211.2",
     "duckdb>=1.4.2",
     "quarto>=0.1.0",
+    "matplotlib>=3.10.8",
 ]
 
 [project.optional-dependencies]
