--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "prefect-aws>=0.5.10",
     "pyarrow>=20.0.0",
     "loguru>=0.7.3",
-    "tqdm>=4.67.1",
+    "tqdm[asyncio]>=4.67.1",
     "polars-lts-cpu>=1.32.3",
     "pyyaml>=6.0",
     "click>=8.0.0",
@@ -35,6 +35,7 @@ dependencies = [
     "duckdb>=1.4.2",
     "quarto>=0.1.0",
     "matplotlib>=3.10.8",
+    "aioboto3>=15.5.0",
 ]
 
 [project.optional-dependencies]
