--- a/.github/workflows/base_runner.yaml
+++ b/.github/workflows/base_runner.yaml
@@ -3,8 +3,8 @@ name: Reusable workflow example
 on:
   workflow_call:
     inputs:
-      module_to_run:
-        # this will be used in `poetry run python -m {{ inputs.module_to_run }}`
+      command_to_run:
+        # this will be used in `run: {{ inputs.command_to_run }}`
         required: true
         type: string
 
@@ -15,34 +15,25 @@ jobs:
       id-token: 'write'
     runs-on: ubuntu-latest
     env:
-      CLICKHOUSE_HOST: ${{ secrets.CLICKHOUSE_HOST }}
-      CLICKHOUSE_USERNAME: ${{ secrets.CLICKHOUSE_USERNAME }}
-      CLICKHOUSE_PASSWORD: ${{ secrets.CLICKHOUSE_PASSWORD }}
-      PUBLISH_DIRECTORY: "gs://omicidx"
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
+      AWS_URL_STYLE: ${{ secrets.AWS_URL_STYLE }}
+      OMICIDX_BASE_PATH: ${{ secrets.OMICIDX_BASE_PATH }}
 
     steps:
-    # actions/checkout MUST come before auth
       - uses: 'actions/checkout@v4'
-  
-      - id: 'auth'
-        name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v2'
-      # Update the values with the output from the setup step
-        with:
-          workload_identity_provider: projects/357925011908/locations/global/workloadIdentityPools/github/providers/omicidx-gh-etl
-          project_id: gap-som-dbmi-sd-app-fq9
-         
-      - run: pipx install poetry
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.9
-          cache: 'poetry'
+          python-version: 3.11
+
       - name: Install dependencies
-        run: poetry install
-      - name: Prefect Auth
-        uses: PrefectHQ/actions-prefect-auth@v1
-        with:
-          prefect-api-key: ${{ secrets.PREFECT_API_KEY }}
-          prefect-workspace: ${{ secrets.PREFECT_WORKSPACE }}
-      - name: Running ${{ inputs.module_to_run }}
-        run: poetry run python -m ${{ inputs.module_to_run }}
+        run: uv sync
+
+      - name: Run SRA extraction
+        run: ${{ inputs.command_to_run }}
