Rename step in base runner workflow

--- a/.github/workflows/base_runner.yaml
+++ b/.github/workflows/base_runner.yaml
@@ -35,5 +35,5 @@ jobs:
       - name: Install dependencies
         run: uv sync
 
-      - name: Run SRA extraction
+      - name: Run ETL command
         run: ${{ inputs.command_to_run }}
