--- a/.github/workflows/ebi_biosample.yaml
+++ b/.github/workflows/ebi_biosample.yaml
@@ -11,6 +11,7 @@ jobs:
       contents: 'read'
       id-token: 'write'
     runs-on: ubuntu-latest
+    timeout-minutes: 180 # 3 hours
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
